--- a/com.youtube.rest/WebContent/index.html
+++ b/com.youtube.rest/WebContent/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>REST Demo</title>
 </head>
 <body>
 Ken's First RESTful Service
